--- a/public/lab_1/index.html
+++ b/public/lab_1/index.html
@@ -1,7 +1,16 @@
-    fruits list:
-    apple
-    Hello world
-    orange
-    pomelo
-    
-    Lorem ipsum generator: https://www.lipsum.com/
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>Conner Houtman</title>
+  </head>
+  <body>
+    <h1>Conner Houtman</h1>
+    <ul>
+        <li>Lab 1</li>
+        <li>Getting</li>
+        <li>Set up</li>
+    </ul>
+    <img src="puppy.png" alt="puppy" />
+  </body>
+</html> 
