--- a/public/lab_3/index.html
+++ b/public/lab_3/index.html
@@ -1,21 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>Birdwatching</title>
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300|Cinzel+Decorative:700" rel="stylesheet">
 
-    <!--[if lt IE 9]>
+<head>
+  <link href="style.css" rel="stylesheet">
+  <meta charset="utf-8">
+  <meta name="author" content="Conner Houtman">
+  <title>Gaming</title>
+  <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@400;500&display=swap" rel="stylesheet">
+  <!--[if lt IE 9]>
       <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-  </head>
+</head>
 
-  <body>
+<body>
+  <div class="header">
+    <h1>Conner Houtman's Lab</h1>
+    <img class="header" src="dove.png" alt="a simple dove logo">
 
-      <h1>Birdwatching</h1>
-      <img src="dove.png" alt="a simple dove logo">
-
-
+    <nav>
       <ul>
         <li><span>Home</span></li>
         <li><a href="#">Get started</a></li>
@@ -23,25 +25,49 @@
         <li><a href="#">Gear</a></li>
         <li><a href="#">Forum</a></li>
       </ul>
+    </nav>
+  </div>
 
-
+  <div class="main">
+    <div class="article">
       <h2>Welcome</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris a massa cursus, aliquet mauris et, luctus
+        tortor.
+        Proin mollis congue justo, vel efficitur arcu tempus id. Phasellus eu eros nec sapien feugiat convallis eget
+        vitae
+        dui. Vivamus luctus fermentum erat, vel rutrum ipsum tempus aliquet. Duis ut tellus venenatis, ultricies
+        sapien
+        ut, interdum velit. Integer orci lectus, porttitor eu facilisis in, suscipit id dolor. Maecenas commodo risus
+        a
+        turpis molestie, in mollis enim facilisis. Nullam auctor viverra magna, vel porttitor tellus interdum ut.
+        Nulla
+        placerat maximus dolor quis condimentum. Nullam eget purus id purus convallis sagittis a cursus nulla. Morbi
+        luctus pulvinar porta. Vestibulum fermentum mauris at ex lobortis porta. Nulla ornare nibh vel condimentum
+        convallis. Nam ut porttitor libero. Sed tincidunt sem nisi, nec sodales quam volutpat quis. Nulla commodo
+        rhoncus
+        pretium.</p>
+      <p>Quisque sed lectus dignissim, sollicitudin mi nec, accumsan turpis. Donec eget bibendum erat. Curabitur eget
+        gravida nunc. Mauris ut mi odio. Aliquam in felis mauris. Nulla ligula urna, euismod imperdiet malesuada quis,
+        pretium ac arcu. Maecenas mi ipsum, congue ac scelerisque id, luctus nec tortor. Vestibulum mollis tortor vel
+        diam
+        gravida eleifend.</p>
+    </div>
 
-      <p>Welcome to our fake birdwatching site. If this were a real site, it would be the ideal place to come to learn more about birdwatching, whether you are a beginner looking to learn how to get into birding, or an expert wanting to share ideas, tips, and photos with other like-minded people.</p>
-
-      <p>So don't waste time! Get what you need, then turn off that computer and get out into the great outdoors!</p>
-
+    <div class="aside">
       <h2>Favourite photos</h2>
+      <a href="gaming setup.jpg"><img src="gaming setup.jpg" alt="Nice gaming setup"></a>
+      <a href="cod mw3.jpg"><img src="cod mw3.jpg" alt="Call of Duty Modern Warfare 3"></a>
+      <a href="warzone.jpg"><img src="warzone.jpg" alt="Warzone battle royale"></a>
+      <a href="zombies.jpg"><img src="zombies.jpg" alt="Call of Duty Zombies"></a>
+    </div>
+  </div>
 
-      <a href="favorite-1.jpg"><img src="favorite-1_th.jpg" alt="Small black bird, black claws, long black slender beak, links to larger version of the image"></a>
-      <a href="favorite-2.jpg"><img src="favorite-2_th.jpg" alt="Top half of a pretty bird with bright blue plumage on neck, light colored beak, blue headdress, links to larger version of the image"></a>
-      <a href="favorite-3.jpg"><img src="favorite-3_th.jpg" alt="Top half of a large bird with white plumage, very long curved narrow light colored break, links to larger version of the image"></a>
-      <a href="favorite-4.jpg"><img src="favorite-4_th.jpg" alt="Large bird, mostly white plumage with black plumage on back and rear, long straight white beak, links to larger version of the image"></a>
+  <div class="footer">
+    <p>This website example has been written by Conner Houtman, 2020</p>
 
+    <p><a href="http://game-icons.net/lorc/originals/dove.html">Dove icon</a> by Lorc.</p>
+  </div>
 
-      <p>This fake website example is CC0 — any part of this code may be reused in any way you wish. Original example written by Chris Mills, 2016.</p>
+</body>
 
-      <p><a href="http://game-icons.net/lorc/originals/dove.html">Dove icon</a> by Lorc.</p>
-
-  </body>
 </html>
