--- a/public/lab_4/index.html
+++ b/public/lab_4/index.html
@@ -2,65 +2,59 @@
 <html lang="en">
 
 <head>
-    <link href="style.css" rel="stylesheet">
+    <link href="styles.css" rel="stylesheet">
     <meta charset="utf-8">
-    <meta name="author" content="Conner Houtman">
     <title>Conner Houtman's Lab 4</title>
 </head>
- 
+
 <body>
-    <div>
-        <div>
-            <div class="header">
-                <h1>Conner Houtman Lab 4</h1>
-            </div>
-
-            <form action="/api" method="post">
-                <ul class="flex-outer">
-                    <li>
-                        <label for="first-name">First Name</label>
-                        <input type="text" id="first-name" maxlength="140" placeholder="Enter your first name here">
-                    </li>
-                    <li>
-                        <label for="last-name">Last Name</label>
-                        <input type="text" id="last-name" maxlength="140" placeholder="Enter your last name here">
-                    </li>
-                    <li>
-                        <label for="email">Email</label>
-                        <input type="email" id="email" placeholder="Enter your email here">
-                    </li>
-                    <li>
-                        <label for="phone">Phone</label>
-                        <input type="tel" id="phone" placeholder="Enter your phone here">
-                    </li>
-                    <li>
-                        <label for="message">Message</label>
-                        <textarea rows="6" cols="33" id="message" placeholder="Enter your message here"></textarea>
-                    </li>
-                    <li>
-                        <p>Age</p>
-                        <ul class="flex-inner">
-                            <li>
-                                <input type="checkbox" id="18-35">
-                                <label for="18-35">18-35</label>
-                            </li>
-                            <li>
-                                <input type="checkbox" id="35-50">
-                                <label for="35-50">35-50</label>
-                            </li>
-                            <li>
-                                <input type="checkbox" id="50-65">
-                                <label for="50-65">50-65</label>
-                            </li>
-                        </ul>
-                    </li>
-                    <li>
-                        <button type="submit">Submit</button>
-                    </li>
-                </ul>
-            </form>
-
-        </div>
+    <h1>Conner Houtman Lab 4</h1>
+    <div class="container">
+        <form action="/api" method="post">
+            <ul class="flex-outer">
+                <li>
+                    <label for="fname">First Name</label>
+                    <input name="fname" type="text" id="fname" maxlength="140" placeholder="Enter your first name here">
+                </li>
+                <li>
+                    <label for="lname">Last Name</label>
+                    <input name="lname" type="text" id="lname" maxlength="140" placeholder="Enter your last name here">
+                </li>
+                <li>
+                    <label for="email">Email</label>
+                    <input name="email" type="email" id="email" placeholder="Enter your email here">
+                </li>
+                <li>
+                    <label for="phone">Phone</label>
+                    <input name="phone" type="tel" id="phone" placeholder="Enter your phone here">
+                </li>
+                <li>
+                    <label for="message">Message</label>
+                    <textarea name="message" rows="5" cols="33" id="message"
+                        placeholder="Enter your message here"></textarea>
+                </li>
+                <li>
+                    <p>Age</p>
+                    <ul class="flex-inner">
+                        <li>
+                            <input name="checkbox" type="checkbox" id="eighteen-to-thirtyfive">
+                            <label for="eighteen-to-thirtyfive">18-35</label>
+                        </li>
+                        <li>
+                            <input name="checkbox" type="checkbox" id="thirtyfive-to-fifty">
+                            <label for="thirtyfive-to-fifty">35-50</label>
+                        </li>
+                        <li>
+                            <input name="checkbox" type="checkbox" id="fifty-to-sixtyfive">
+                            <label for="fifty-to-sixtyfive">50-65</label>
+                        </li>
+                    </ul>
+                </li>
+                <li>
+                    <button name="submit" type="submit" id="submit">Submit</button>
+                </li>
+            </ul>
+        </form>
     </div>
 
 </body>
