--- a/public/lab_6/index.html
+++ b/public/lab_6/index.html
@@ -7,6 +7,7 @@
       integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs="
       crossorigin="anonymous"
     ></script>
+    <title>Conner Houtman's Lab 6</title>
   </head>
   <body>
     <div class="wrapper">
