--- a/public/lab_6/index.html
+++ b/public/lab_6/index.html
@@ -13,6 +13,7 @@
     <div class="wrapper">
       <div class="container flex-outer">
         <div class="header">
+          <h1>Conner Houtman's Lab 6</h1>
         </div>
         <form>
           <button
