messing with heroku

--- a/public/lab_7/index.html
+++ b/public/lab_7/index.html
@@ -9,5 +9,18 @@
 
     - TRY THIS: type "doc" at the top of this file and press "tab" for Emmet autocomplete support
 -->
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="styles.css" />
+    <script
+    >
+    </script>
+</head>
+<body>
+    
+</body>
+</html>
 
